--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
 
       </div>
     </div>
+    <p>
+    by <a href="http://weibo.com/bjdc" target="_blank">拔剑断愁</a></p>
   </div>
 
   <script src="javascripts/animframe_polyfill.js"></script>
