--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container">
     <strong class="important">注:</strong> 原作2048地址<a href="http://gabrielecirulli.github.io/2048">http://gabrielecirulli.github.io/2048</a> <br>作者<a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a>
 本版本是2048改编版。如果觉得游戏不错，你可以去原作者页面进行捐助。<br>
-    
+    <p>古剑奇谭二版：<a href="http://gjqt2.github.io">http://gjqt2.github.io</a></p>
     <hr>
     <div class="heading">
       <h1 class="title">停不下的古剑</h1>
@@ -83,7 +83,7 @@
       </div>
     </div>
     <p>
-    by <a href="http://weibo.com/bjdc" target="_blank">拔剑断愁</a></p>
+    有问题或者建议可以联系 <a href="http://weibo.com/bjdc" target="_blank">拔剑断愁</a></p>
   </div>
 
   <script src="javascripts/animframe_polyfill.js"></script>
