--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <strong class="important">注:</strong> 原作2048地址<a href="http://gabrielecirulli.github.io/2048">http://gabrielecirulli.github.io/2048</a> <br>作者<a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a>
 本版本是2048改编版。如果觉得游戏不错，你可以去原作者页面进行捐助。<br><br>
     <p>古剑奇谭二版：<a href="http://gjqt2.github.io">http://gjqt2.github.io</a></p>
+    <p>古剑奇谭武器版：<a href="http://bjdc.github.io">http://bjdc.github.io</a></p>
     <hr>
     <div class="heading">
       <h1 class="title">停不下的古剑</h1>
