--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
-  <title>停不下的古剑</title>
+  <title>2048之古剑奇谭</title>
 
   <link href="stylesheets/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -23,9 +23,10 @@
 本版本是2048改编版。如果觉得游戏不错，你可以去原作者页面进行捐助。<br><br>
     <p>古剑奇谭二版：<a href="http://gjqt2.github.io">http://gjqt2.github.io</a></p>
     <p>古剑奇谭武器版：<a href="http://bjdc.github.io">http://bjdc.github.io</a></p>
+    <p>一代及二代主要人物版：<a href="http://gjqt.github.io/mainRole">http://gjqt.github.io/mainRole</a></p>
     <hr>
     <div class="heading">
-      <h1 class="title">停不下的古剑</h1>
+      <h2 class="title">2048之古剑奇谭</h2>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
