--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 本版本是2048改编版。如果觉得游戏不错，你可以去原作者页面进行捐助。<br><br>
     <p>古剑奇谭二版：<a href="http://gjqt2.github.io">http://gjqt2.github.io</a></p>
     <p>古剑奇谭武器版：<a href="http://bjdc.github.io">http://bjdc.github.io</a></p>
-    <p>一代及二代主要人物版：<a href="http://gjqt.github.io/mainRole">http://gjqt.github.io/mainRole</a></p>
+    <p>历代主要人物(图片模式)版：<br><a href="http://gjqt.github.io/mainRole">http://gjqt.github.io/mainRole</a></p>
     <hr>
     <div class="heading">
       <h2 class="title">2048之古剑奇谭</h2>
