--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="game-message">
         <p></p>
         <div class="lower">
-          <a class="retry-button">再来一次</a>
+          <a class="retry-button">卷土重来</a>
           <div class="score-sharing"></div>
         </div>
       </div>
