--- a/index.html
+++ b/index.html
@@ -19,13 +19,7 @@
 <body>
 
   <div class="container">
-    <strong class="important">注:</strong> 原作2048地址<a href="http://gabrielecirulli.github.io/2048">http://gabrielecirulli.github.io/2048</a> <br>作者<a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a>
-本版本是2048改编版。如果觉得游戏不错，你可以去原作者页面进行捐助。<br><br>
-    <p>古剑奇谭二版：<a href="http://gjqt2.github.io">http://gjqt2.github.io</a></p>
-    <p>古剑奇谭武器版：<a href="http://bjdc.github.io">http://bjdc.github.io</a></p>
-    <p>历代主要人物版(图片模式)：<br><a href="http://gjqt.github.io/mainRole">http://gjqt.github.io/mainRole</a></p>
-	<p style="color:#A20000";><strong>苏雪特别版：</strong><br><a href="http://gjqt.github.io/suxue">http://gjqt.github.io/suxue</a></p>
-    <hr>
+	<p>本版本新增场景模式(含有大量图片，爪机流量党慎入)：<a href="http://gjqt.github.io/bg">http://gjqt.github.io/bg</a></p>
     <div class="heading">
       <h2 class="title">2048之古剑奇谭</h2>
       <div class="scores-container">
@@ -86,6 +80,15 @@
       </div>
     </div>
     <br>
+	<p>其他版本：</p>	
+	<p style="color:#A20000";><strong>苏雪特别版：</strong><br><a href="http://gjqt.github.io/suxue">http://gjqt.github.io/suxue</a></p>
+	<p>古剑奇谭二版：<a href="http://gjqt2.github.io">http://gjqt2.github.io</a></p>
+    <p>古剑奇谭武器版：<a href="http://bjdc.github.io">http://bjdc.github.io</a></p>
+    <p>历代主要人物版(图片模式)：<br><a href="http://gjqt.github.io/mainRole">http://gjqt.github.io/mainRole</a></p>
+	<hr>
+    <strong class="important">注:</strong> 原作2048地址<a href="http://gabrielecirulli.github.io/2048">http://gabrielecirulli.github.io/2048</a> <br>作者<a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a>
+		本版本是2048改编版。如果觉得游戏不错，你可以去原作者页面进行捐助。<br><br>  
+    <hr>
     <p>
     有问题或者建议可以联系 <a href="http://weibo.com/bjdc" target="_blank">拔剑断愁</a></p>
   </div>
