--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
 
   <div class="container">
+	<p><strong>全新玩法上线：</strong>每次出现的BOSS不再只是最低级的BOSS，有机率出现当前最高等级的BOSS！</p>
 	<p>本版本新增场景模式(含有大量图片，爪机流量党慎入)：<a href="http://gjqt.github.io/bg">http://gjqt.github.io/bg</a></p>
     <div class="heading">
       <h2 class="title">2048之古剑奇谭</h2>
@@ -81,7 +82,7 @@
     </div>
     <br>
 	<p>其他版本：</p>	
-	<p style="color:#A20000";><strong>苏雪特别版：</strong><br><a href="http://gjqt.github.io/suxue">http://gjqt.github.io/suxue</a></p>
+	<p style="color:#A20000";><strong>苏雪特别版（有背景音乐）：</strong><br><a href="http://gjqt.github.io/suxue">http://gjqt.github.io/suxue</a></p>
 	<p>古剑奇谭二版：<a href="http://gjqt2.github.io">http://gjqt2.github.io</a></p>
     <p>古剑奇谭武器版：<a href="http://bjdc.github.io">http://bjdc.github.io</a></p>
     <p>历代主要人物版(图片模式)：<br><a href="http://gjqt.github.io/mainRole">http://gjqt.github.io/mainRole</a></p>
