--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
   <div class="container">
 	<p><strong>全新玩法上线：</strong>每次出现的BOSS不再只是最低级的BOSS，有机率出现当前最高等级的BOSS！</p>
+	<p><strong>安卓版</strong>下载地址：</p>
+	<a href="http://vdisk.weibo.com/s/vqWG6vgnsT27">http://vdisk.weibo.com/s/vqWG6vgnsT27</a>
+	<hr>
 	<p>本版本新增场景模式(含有大量图片，爪机流量党慎入)：<a href="http://gjqt.github.io/bg">http://gjqt.github.io/bg</a></p>
     <div class="heading">
       <h2 class="title">2048之古剑奇谭</h2>
