--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 	<p>◎本版本全程自动存档。</p>
 	<hr>	
 	<p>最新<strong>安卓版</strong>(v1.4)下载地址：</p>
-	<a href="http://vdisk.weibo.com/s/vqWG6vfTO9PU">http://vdisk.weibo.com/s/vqWG6vfTO9PU</a>
+	新浪微盘：<a href="http://vdisk.weibo.com/s/vqWG6vfTO9PU">http://vdisk.weibo.com/s/vqWG6vfTO9PU</a><br>
+	百度网盘：<a href="http://pan.baidu.com/s/1c0d5140">http://pan.baidu.com/s/1c0d5140</a>
 	<hr>
 	<p>本版本另有场景模式：<a href="http://gjqt.github.io/bg">http://gjqt.github.io/bg</a></p>
 	<hr>
